iptables.rules
# Generated by iptables-save v1.6.2 on Sun Apr 15 22:32:00 2018
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -s 255.255.255.255/32 -i wlp2s0 -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -j DROP
-A FORWARD -j DROP
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -d 185.151.58.117/32 -o wlp2s0 -p tcp -j ACCEPT
-A OUTPUT -o tun0 -j ACCEPT
-A OUTPUT -d 192.168.0.0/16 -o wlp2s0 -j ACCEPT
-A OUTPUT -d 10.0.0.0/8 -o wlp2s0 -j ACCEPT
-A OUTPUT -d 255.255.255.255/32 -o wlp2s0 -j ACCEPT
-A OUTPUT -j DROP
COMMIT
# Completed on Sun Apr 15 22:32:00 2018
